# Qt-Verdigris-Example

./: .gitignore  .gitmodules  CMakeLists.txt
Qt_Qmake/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Qt_Verdigris/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
